syntax='proto3';

import 'google/protobuf/empty.proto';

service MessageService {
  rpc SendMessage (Message) returns (MessageReceipt) {}
  rpc SendMessageStream (stream Message) returns (google.protobuf.Empty) {}
  rpc ReadMessageStream (google.protobuf.Empty) returns (stream MessageReceipt) {}
}

message Message {
  /**
   * The content of the message.
   */
  string content = 1;
}

message MessageReceipt {
  /**
   * The ID of the message.
   */
  int32 id = 1;

  /**
   * The length of the message received.
   */
  int32 length = 2;
}
